<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.flowerplatform</groupId>
	<artifactId>flower-platform-rapp-manager-linux</artifactId>
	<version>1.0.0</version>
	<name>flower-platform-rapp-manager-linux</name>

	<properties>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
	
		<maven.build.timestamp.format>yyyyMMddHHmm</maven.build.timestamp.format>
		<versionDir>${project.basedir}/src/main/java/org/flowerplatform/rapp_manager/linux</versionDir>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.flowerplatform</groupId>
			<artifactId>flower-platform-rapp-manager</artifactId>
			<version>1.0.0</version>
		</dependency>

		<!-- Dependencies for tests -->
		<dependency>
			<groupId>ant</groupId>
			<artifactId>ant-junit</artifactId>
			<version>1.6.5</version>
		</dependency>
		<dependency>
			<groupId>org.apache.directory.studio</groupId>
			<artifactId>org.apache.commons.io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>1.3</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.junit-toolbox</groupId>
			<artifactId>junit-toolbox</artifactId>
			<version>2.2</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>
	
		<finalName>${project.artifactId}-${project.version}-${maven.build.timestamp}</finalName>
		<plugins>
        	<!-- create jar bundle -->
        	<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<descriptor>assembly.xml</descriptor>
					<archive>
						<manifest>
							<mainClass>org.flowerplatform.rapp_manager.linux.Main</mainClass>
						</manifest>
					</archive>
				</configuration>
			</plugin>
			
		</plugins>
	</build>

</project>
